# django-bugz

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build-and-test.yml  test.yml
assets/: package.json  update_assets.sh
bugz/: admin.py  apps.py  appsettings.py  asgi.py  forms.py  manage.py  models.py  rules.py  settings.py  urls.py  views.py  wsgi.py
bugz/migrations/: 0001_initial.py
bugz/static/bugz/: bundle.js
bugz/templates/bugz/: base.html  stub-assignee-icon.html  stub-assignee.html  stub-author.html  stub-labels.html  stub-tickets.html  ticket-create.html  ticket-detail.html  ticket-list.html
bugz/templates/registration/: login.html
bugz/templatetags/: bugz.py
demoapp/: manage.py  requirements.txt
demoapp/demoapp/: asgi.py  settings.py  urls.py  wsgi.py
demoapp/demoapp/static/: theme.css
example_project/: init.sh
example_project/example_project/: settings.py  urls.py
example_project/example_project/templates/bugz/: base.html
js/: Makefile
js/src/: index.js
tests/: settings.py  tests.py
